alpha/stylesheets/style.css
* {
    margin: 0;
    padding: 0;
}

html,
body {
    -webkit-font-smoothing: antialiased;
    max-width: 100%;
    font-family: Graphik,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

.page-header {
    background-color:  #24292e;
    color: #fff;
    font-weight: 500;
}

nav.topnav > ul {
    display: flex;
    flex-wrap: wrap;
    padding-left: 0;
    list-style-type: none;
    justify-content: center;
}

nav.topnav > ul > li > a {
    display: block;
    padding: 15px 20px;
    text-decoration: none;
    color: unset;
}

nav.topnav > ul > li:not(:last-child) > a:hover {
    background-color: #15344a; /*#3f7fa8;*/
}

nav.topnav a.active {
    background-color:  #15344a;
}

nav.topnav .icon {
    display: none;
  }

@media screen and (max-width: 600px) {
    nav.topnav > ul > li:not(:last-child) {display: none;}
    nav.topnav a.icon {
      display: block;
    }
    nav.topnav > ul {        
        justify-content: flex-end;
    }

    nav.topnav.responsive {position: relative;}
    nav.topnav.responsive a.icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    nav.topnav.responsive > ul {
        flex-direction: column;
    }
    nav.topnav.responsive > ul > li {display: block;}
  }


.page-header > div > img {
    width: 100%;
    height: 350px;
}

.main-content {
    flex: 1 0 auto;
}

.main-content > div {
    max-width: 700px;
    margin: 0 auto;
    padding: 2em;
}

.main-content > div > p {
    padding: 10px 0;
}

.site-footer {
    background-color: #292929;
    color: rgba(255, 255, 255, 0.8);
    flex-shrink: 0;
    flex-wrap: wrap;
}

.site-footer-pad-big {
    padding-left: 1.25em;
    padding-right: 1.25em;
    padding-top: 1.25em;
    padding-bottom: 1.25em;
}

.site-footer-pad-small {
    padding: 0.1em;
}

.site-footer-logo > img {
    width: 60px;
    align-self: center;
}

.site-footer-social {
    text-align: center;
}

.site-footer-social > a {
    display: inline-block;
    text-decoration: none;
    color: gray;
    margin: 0.2em;
}

.centered {
    display: flex;
    justify-content: center;
    align-content: center;
}

.centered-dynamic {
    flex-direction: row;
}

.centered-row {
    flex-direction: row;
}

.centered-column {
    flex-direction: column;
}

.top-img {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-color: #15344a;
    background-size: cover;
    background-repeat: no-repeat;
    width: auto;
    z-index: 1;
    height: 300px;
    display: flex;
    justify-content: center;
    align-content: center;
}

.img-home {
    background-image: url('../img/home.jpg');
}

.img-about {
    background-image: url('../img/about.jpg');
}

.img-services {
    background-image: url('../img/services.jpg');
}

.jumbotron {
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
}

a.btn-link {
    text-decoration: none;
    color: unset;
    display: inline-block;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    border-radius: 6px;
    font-size: 18px;
    margin: 10px 0;
    padding: 10px 30px;
    background-color: transparent;
    border: 1px solid #fff;
    color: #fff;
} 

a.btn-link:hover {
    background-color: #fff;
    color: #292929;
}

input[type=text], select, textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
  }
  
  input[type=submit] {
    background-color: #15344a;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }
  
  input[type=submit]:hover {
    background-color: #15344a;
  }
  
  .container {
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 20px;
  }

  ul.list-with-icon {
    margin: 2em 0;
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  ul.list-with-icon > li {
    margin: 0.5em;
    display: block;
    background-clip: border-box;
    border: 1px solid rgba(0,0,0,.125);
    border-radius: .25rem;
    padding: 1.5em;
    width: 17.5em;
  }

  ul.list-with-icon > li > i {
    display: block;
    text-align: center;
    margin-bottom: 0.2em;
  }

  ul.list-with-icon > li > h3 {
    text-align: center;
  }

  ul.list-with-icon > li > p {
    padding: 1em;
    text-align: justify;
  }

  @media screen and (max-width: 600px) {
    ul.list-with-icon {
        flex-direction: column;
    }

    ul.list-with-icon > li {
        width: 90%;
    }

    .centered-dynamic {
        flex-direction: column;
    }

    .site-footer-pad-big {
        padding-top: 0.5em;
        padding-bottom: 0.5em;
    }
  }

